feat: range marker color css

--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -117,3 +117,38 @@
         }
     }
 </script>
+
+<style>
+
+    input[type="range"]::-webkit-slider-thumb {
+        appearance: none;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        background: #F9837C;
+        cursor: pointer;
+        border: none;
+        transition: background 0.3s ease;
+    }
+
+    input[type="range"]::-moz-range-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #F9837C;
+        cursor: pointer;
+        border: none;
+        transition: background 0.3s ease;
+    }
+
+    input[type="range"]::-ms-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #F9837C;
+        cursor: pointer;
+        border: none;
+        transition: background 0.3s ease;
+    }
+
+</style>
