--- a/app/views/dashboard/_meetings_card.html.erb
+++ b/app/views/dashboard/_meetings_card.html.erb
@@ -2,7 +2,7 @@
   <div class="flex justify-between">
     <h1 class="text-2xl font-semibold text-gray-800 mb-2">Meetings</h1>
     <div class="flex items-center gap-1">
-      <p class="text-sm font-medium text-gray-800 bg-blue-100 rounded-sm py-0.5 px-1 h-6"><%= h(@progress) %>%</p>
+      <p class="text-sm font-medium text-gray-800 bg-[#EEF6F8] rounded-md py-0.5 px-1 h-6"><%= h(@progress) %>%</p>
       <p class="text-xs font-regular">Achieved</p>
     </div>
   </div>
@@ -47,7 +47,7 @@
               <p class="text-gray-800 font-medium text-sm">Upcoming meeting is <span class="font-semibold"><%= days_away %></span> days away</p>
             <% end %>
           <% else %>
-            <p class="text-gray-800 font-medium text-sm">Let's schedule the first meeting!</p>
+            <p class="text-gray-800 font-medium text-sm">Let's schedule meeting!</p>
           <% end %>
         </div>
         <%= link_to 'Take Action', meetings_path, class: 'text-gray-500 font-regular text-xs underline' %>
