--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -32,7 +32,7 @@
           <div class="col-span-2">
             <%= form.label :location_type, "Location", class: "block mb-2 text-sm font-medium text-[#202020] dark:text-white" %>
             <div class="flex gap-2">
-              <%= form.select :location_type, options_for_select([["Select", ""], ["Online", "On"], ["In-person", "In"]], @meeting.location_type), {}, class: "w-1/3 bg-gray-50 border border-[#D9D9D9] text-[#202020] text-sm rounded-lg focus:ring-[#898989] focus:border-[#898989] block w-full p-2.5 dark:bg-[#898989] dark:border-[#898989] dark:placeholder-gray-400 dark:text-white dark:focus:ring-[#898989] dark:focus:border-[#898989]" %>
+              <%= form.select :location_type, options_for_select([["Select", ""], ["Online", "Online"], ["In-person", "In-person"]], @meeting.location_type), {}, class: "w-1/3 bg-gray-50 border border-[#D9D9D9] text-[#202020] text-sm rounded-lg focus:ring-[#898989] focus:border-[#898989] block w-full p-2.5 dark:bg-[#898989] dark:border-[#898989] dark:placeholder-gray-400 dark:text-white dark:focus:ring-[#898989] dark:focus:border-[#898989]" %>
               <%= form.text_field :location, id: "location", value: @meeting.location, class: "bg-gray-50 border border-[#D9D9D9] text-[#202020] text-sm rounded-lg focus:ring-[#898989] focus:border-[#898989] block w-full p-2.5 dark:bg-[#898989] dark:border-[#898989] dark:placeholder-gray-400 dark:text-white dark:focus:ring-[#898989] dark:focus:border-[#898989]", placeholder: "Address", required: true %>
             </div>
           </div>
