--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -1,6 +1,10 @@
 <div class="w-[17.5rem] h-auto p-6 bg-white rounded-[12px] shadow-md mr-8">
   <div class="flex items-center mb-4">
-    <img src="<%= asset_path("sample_img/admin_user.png") %>" alt="Admin Avatar" class="w-12 h-12 rounded-full">
+    <% if current_user.profile_picture.attached? %>
+      <%= image_tag current_user.profile_picture, class: "w-12 h-12 rounded-full object-cover" %>
+    <% else %>
+      <%= image_tag asset_path("sample_img/admin_user.png"), class: "w-12 h-12 rounded-full object-cover", alt: "Default Avatar" %>
+    <% end %>    
     <div class="ml-4">
       <h3 class="text-lg font-semibold"><%= current_user.name %></h3>
       <p class="text-sm text-gray-500"><%= current_user.title %></p>
@@ -51,7 +55,7 @@
                 <%= link_to "View Members", cohort_members_path(cohort_id: cohort.id), class: "text-black" %>
               </li>
               <li class="hover:bg-gray-100 p-2 rounded transition-colors duration-200">
-                <%= link_to "Matches", matches_path(cohort_id: cohort.id), class: "text-black" %> 
+                <%= link_to "Matches", matches_path(cohort_id: cohort.id), class: "text-black" %>
               </li>
             </ul>
           </div>
