--- a/app/views/meetings/_mentee_meeting_table.html.erb
+++ b/app/views/meetings/_mentee_meeting_table.html.erb
@@ -11,79 +11,92 @@
   Where conversations spark growth. Schedule your next meeting with your mentor today!
 </p>
 <div class="overflow-y-auto max-h-[28.5rem] border border-gray-300 rounded-md">
-
   <table class="w-full text-[0.8rem] text-center rtl:text-right text-[#898989]">
     <thead class="text-xs text-white bg-[#202020] rounded-t-lg">
-    <tr>
-      <th scope="col" class="px-6 py-2 rounded-tl-lg">No.</th>
-      <th scope="col" class="px-6 py-2">Mentor</th>
-      <th scope="col" class="px-6 py-2">Date</th>
-      <th scope="col" class="px-6 py-2">Time</th>
-      <th scope="col" class="px-6 py-2">Location</th>
-      <th scope="col" class="px-6 py-2">Note</th>
-      <th scope="col" class="px-6 py-2 rounded-tr-lg">Action</th>
-    </tr>
+      <tr>
+        <th scope="col" class="px-6 py-2 rounded-tl-lg">No.</th>
+        <th scope="col" class="px-6 py-2">Mentor</th>
+        <th scope="col" class="px-6 py-2">Date</th>
+        <th scope="col" class="px-6 py-2">Time</th>
+        <th scope="col" class="px-6 py-2">Location</th>
+        <th scope="col" class="px-6 py-2">Note</th>
+        <th scope="col" class="px-6 py-2 rounded-tr-lg">Action</th>
+      </tr>
     </thead>
     <tbody>
-    <% @meetings.each_with_index do |meeting, i| %>
-      <tr id="meeting-<%= meeting.id %>" class="text-[#202020] font-medium bg-white border-b dark:bg-[#202020] dark:border-[#676666] hover:bg-gray-50 dark:hover:bg-[#898989]">
-        <td class="px-6 py-2"><%= i + 1 %></td>
-        <td class="flex items-center px-6 py-4 text-[#202020] whitespace-nowrap dark:text-white">
-          <img src="<%= asset_path("sample_img/mentor_sample.png") %>" alt="User picture" class="w-8 h-8 rounded-full">
-          <div class="ps-3">
-            <div class="font-medium"><%= meeting.mentor.name %></div>
-          </div>
-        </td>
-        <td class="px-6 py-2"><%= meeting.date.strftime('%a, %b %d, %Y') %></td>
-        <td class="px-6 py-2"><%= meeting.time.strftime('%I:%M %p') %></td>
-        <td class="px-6 py-2">
-          <span class="text-[#202020] hover:text-[#F9837C]">
-            <% if meeting.location_type == 'Online' %>
-              <a href="<%= meeting.location %>" target="_blank">Meeting Link</a>
+      <% @meetings.each_with_index do |meeting, i| %>
+        <tr id="meeting-<%= meeting.id %>" class="text-[#202020] font-medium bg-white border-b dark:bg-[#202020] dark:border-[#676666] hover:bg-gray-50 dark:hover:bg-[#898989]">
+          <td class="px-6 py-2"><%= i + 1 %></td>
+          <td class="flex items-center px-6 py-4 text-[#202020] whitespace-nowrap dark:text-white">
+            <% if current_user.profile_picture.attached? %>
+              <%= image_tag current_user.profile_picture, 
+              class: "w-8 h-8 rounded-full",
+              alt: "#{current_user.name}'s profile picture" %>
             <% else %>
-              <a href="https://www.google.com/maps/search/<%= CGI.escape(meeting.location) %>" target="_blank"><%= meeting.location %></a>
+              <%= image_tag asset_path("sample_img/default_user.png"), 
+              class: "w-8 h-8 rounded-full",
+              alt: "Default profile picture" %>
             <% end %>
-          </span>
-        </td>
-        <td class="px-6 py-2">
-          <a href="#" type="button"
+            <div class="ps-3">
+              <div class="font-medium"><%= meeting.mentor.name %></div>
+            </div>
+          </td>
+          <td class="px-6 py-2"><%= meeting.date.strftime('%a, %b %d, %Y') %></td>
+          <td class="px-6 py-2"><%= meeting.time.strftime('%I:%M %p') %></td>
+          <td class="px-6 py-2">
+            <span class="text-[#202020] hover:text-[#F9837C]">
+              <% if meeting.location_type == 'Online' %>
+                <a href="<%= meeting.location %>" target="_blank">Meeting Link</a>
+              <% else %>
+                <a href="https://www.google.com/maps/search/<%= CGI.escape(meeting.location) %>" target="_blank"><%= meeting.location %></a>
+              <% end %>
+            </span>
+          </td>
+          <td class="px-6 py-2">
+            <a href="#" type="button"
              data-modal-target="viewNoteModal-<%= meeting.id %>"
              data-modal-show="viewNoteModal-<%= meeting.id %>"
              data-meeting-notes="<%= meeting.notes %>"
              class="font-medium text-[#898989] hover:underline">
-            <img src="<%= asset_path('icon/note.svg') %>" alt="note" class="h-4">
-          </a>
-        </td>
-        <td class="px-6 py-2 font-medium text-[#898989]">
-          <%= link_to "Edit", edit_meeting_path(meeting.id) %> |
-          <!--TODO: DELETE Method not working-->
-          <%= link_to "Delete", meeting_path(meeting.id), data: { "turbo-method": :delete } %>
-        </td>
-      </tr>
-      <%= render "meetings/view_note_modal", meeting: meeting %>
-    <% end %>
-
-    <% @remaining_meetings.times do |i| %>
-      <tr id="meeting-empty-<%= i + 1 %>" class="text-[#898989] font-medium bg-white border-b hover:bg-gray-50">
-        <td class="px-6 py-2">
-          <%= @meetings.count + i + 1 %>
-        </td>
-        <td class="flex items-center px-6 py-4 text-[#898989] whitespace-nowrap dark:text-white">
-          <img src="<%= asset_path("sample_img/mentor_sample.png") %>" alt="User picture" class="w-8 h-8 rounded-full">
-          <div class="ps-3">
-            <div class="font-medium"><%= @mentor.name %></div>
-          </div>
-        </td>
-        <td class="px-6 py-2"></td>
-        <td class="px-6 py-2">Not Scheduled Yet</td>
-        <td class="px-6 py-2"></td>
-        <td class="px-6 py-2"></td>
-        <td class="px-6 py-2 font-medium text-[#898989]">
-          <%= link_to "Add Meeting", new_meeting_path(match_id: @match.id), class: "text-[#202020] hover:underline" %>
-        </td>
-      </tr>
-    <% end %>
+              <img src="<%= asset_path('icon/note.svg') %>" alt="note" class="h-4">
+            </a>
+          </td>
+          <td class="px-6 py-2 font-medium text-[#898989]">
+            <%= link_to "Edit", edit_meeting_path(meeting.id) %> |
+            <!--TODO: DELETE Method not working-->
+            <%= link_to "Delete", meeting_path(meeting.id), data: { "turbo-method": :delete } %>
+          </td>
+        </tr>
+        <%= render "meetings/view_note_modal", meeting: meeting %>
+      <% end %>
+      <% @remaining_meetings.times do |i| %>
+        <tr id="meeting-empty-<%= i + 1 %>" class="text-[#898989] font-medium bg-white border-b hover:bg-gray-50">
+          <td class="px-6 py-2">
+            <%= @meetings.count + i + 1 %>
+          </td>
+          <td class="flex items-center px-6 py-4 text-[#898989] whitespace-nowrap dark:text-white">
+            <% if current_user.current_user_mentor.profile_picture.attached? %>
+              <%= image_tag current_user.current_user_mentor.profile_picture,
+                  class: "w-9 h-9 object-cover rounded-full border",
+                  alt: "#{current_user.current_user_mentor.name}'s profile picture" %>
+            <% else %>
+              <%= image_tag asset_path('sample_img/default_user.png'),
+                  class: "w-9 h-9 object-cover rounded-full border",
+                  alt: "Default mentor profile picture" %>
+            <% end %>
+            <div class="ps-3">
+              <div class="font-medium"><%= @mentor.name %></div>
+            </div>
+          </td>
+          <td class="px-6 py-2"></td>
+          <td class="px-6 py-2">Not Scheduled Yet</td>
+          <td class="px-6 py-2"></td>
+          <td class="px-6 py-2"></td>
+          <td class="px-6 py-2 font-medium text-[#898989]">
+            <%= link_to "Add Meeting", new_meeting_path(match_id: @match.id), class: "text-[#202020] hover:underline" %>
+          </td>
+        </tr>
+      <% end %>
     </tbody>
   </table>
 </div>
-
