--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -11,15 +11,15 @@
 
   <!--top profile card-->
   <div class="bg-[#FFFFFF] flex gap-5 py-5 border-slate-300 rounded-lg px-5 w-895px h-171px mb-3">
-     <% if current_user.profile_picture.attached? %>
-          <%= image_tag current_user.profile_picture, 
-              class: "w-24 h-24 rounded-lg object-cover",
-              alt: "#{current_user.name}'s profile picture" %>
-        <% else %>
-          <%= image_tag asset_path("sample_img/default_user.png"), 
-              class: "w-24 h-24 rounded-lg object-cover",
-              alt: "Default profile picture" %>
-        <% end %>
+      <% if current_user.current_user_mentor.profile_picture.attached? %>
+              <%= image_tag current_user.current_user_mentor.profile_picture,
+                  class: "w-24 h-24 object-cover rounded-lg border",
+                  alt: "#{current_user.current_user_mentor.name}'s profile picture" %>
+            <% else %>
+              <%= image_tag asset_path('sample_img/default_user.png'),
+                  class: "w-24 h-24 object-cover rounded-lg border",
+                  alt: "Default mentor profile picture" %>
+            <% end %>
     <div>
       <b class="text-lg text-[#202020] font-bold"><%= user.name %></b>
       <p class="text-sm	text-[#202020] mb-2.5"><%= user.title %></p>
@@ -28,7 +28,7 @@
           <img src="<%= asset_path('icon/office.svg') %>" alt="office" class="max-w-15 max-h-15">
           <p class="text-xs text-[#202020]">Discovery Partners Institute</p>
         </div>
-        <!-- TODO <p><%#= user.company %></p> -->
+        
         <div class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-4">
           <div class="flex gap-1">
             <img src="<%= asset_path('icon/LinkedIn.svg') %>" alt="LinkedIn" class="max-w-15 max-h-15 mr-1">
