changed sample image to default image

--- a/app/views/shared/_user_modal.html.erb
+++ b/app/views/shared/_user_modal.html.erb
@@ -15,7 +15,7 @@
     <!-- Header: Profile Image, Name, and Status -->
     <div class="flex items-center space-x-4 mb-6">
       <img 
-        src="<%= asset_path("sample_img/user_mini_image.png") %>" 
+        src="<%= asset_path("sample_img/default_user.png") %>" 
         alt="User profile picture" 
         class="w-20 h-20 object-cover rounded-full border-2 border-gray-200 shadow-sm"
       />
