--- a/app/views/matches/_new_match_modal.html.erb
+++ b/app/views/matches/_new_match_modal.html.erb
@@ -3,6 +3,6 @@
         <button class="absolute top-2 right-2 text-gray-500 hover:text-gray-700" onclick="closeModal('create_match_modal')">
             <i class="fas fa-times"></i>
         </button>
-        <%= render partial: "matches/form_new", locals: { match: @match, cohort: @cohort, current_time_in_user_zone: @current_time_in_user_zone } %>
+        <%= render partial: "matches/form", locals: { match: @match, cohort: @cohort, current_time_in_user_zone: @current_time_in_user_zone } %>
     </div>
 </div>
