--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -42,13 +42,13 @@
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :shortlist_start_time, "Shotlist Start Time", class: "font-medium mb-1" %>
+    <%= form.label :shortlist_start_time, "Shortlist Start Time", class: "font-medium mb-1" %>
     <%= form.datetime_field :shortlist_start_time,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :shortlist_end_time, "Shotlist End Time", class: "font-medium mb-1" %>
+    <%= form.label :shortlist_end_time, "Shortlist End Time", class: "font-medium mb-1" %>
     <%= form.datetime_field :shortlist_end_time,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
