--- a/app/views/program_admin_mailer/admin_created_email.html.erb
+++ b/app/views/program_admin_mailer/admin_created_email.html.erb
@@ -1,6 +1,3 @@
-<h1>Hi</h1>
-
-<p>You have been added as an admin for <%= @program_name %>.</p>
-<p>Please log in to manage your responsibilities.</p>
-
-<p>MentE</p>
+<% title = "You're now an admin for #{}" %>
+<% message = "#{@survey.match.mentee.first_name} #{@survey.match.mentee.last_name} submitted their survey about #{@survey.match.mentor.first_name} #{@survey.match.mentor.last_name}! Click through to see what they had to say!" %>
+<%= render "email_templates/general_email_template", user: @user, title:, message: %>
