update: matching layout to other dashboard

--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-center p-8">
+<div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1.3rem] h-[80vh]">
   <%= render partial: "admin_sidebar" %>
   <main class="w-[calc(100%-22rem)] p-6">
     <h1 class="text-2xl font-bold mb-2">Hi <%= current_user.first_name %>!</h1>
