--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="w-[17.5rem] h-auto p-6 bg-white rounded-[12px] shadow-md mr-8">
+<div class="w-[17.5rem] h-auto p-6 bg-white rounded-[12px] shadow-sm mr-8 ">
   <div class="flex items-center mb-4">
     <% if current_user.profile_picture.attached? %>
       <%= image_tag current_user.profile_picture, class: "w-12 h-12 rounded-full object-cover" %>
