--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: cohort, class: "space-y-4") do |form| %>
   <% if cohort.errors.any? %>
-    <div class="bg-red-100 text-red-700 p-4 rounded-lg">
+    <div class="bg-red-100 text-red-700 p-30 rounded-lg">
       <h2 class="font-semibold mb-2">
         <%= pluralize(cohort.errors.count, "error") %> prohibited this cohort from being saved:
       </h2>
@@ -20,47 +20,51 @@
   <div class="flex flex-col">
     <%= form.label :cohort_name, "Cohort Name", class: "font-medium mb-1" %>
     <%= form.text_field :cohort_name,
-                        class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+                        class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-gray-500" %>
   </div>
 
   <div class="flex flex-col">
     <%= form.label :description, class: "font-medium mb-1" %>
     <%= form.text_area :description,
-                       class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+                       class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-gray-500" %>
   </div>
 
-  <div class="flex flex-col">
-    <%= form.label :start_date, "Cohort Start Time", class: "font-medium mb-1" %>
-    <%= form.datetime_field :start_date,
-                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+  <div class="flex justify-between">
+    <div class="flex flex-col">
+      <%= form.label :start_date, "Cohort Start Time", class: "font-medium mb-1" %>
+      <%= form.datetime_field :start_date,
+                              class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-gray-500" %>
+    </div>
+
+    <div class="flex flex-col">
+      <%= form.label :end_date, "Cohort End Time", class: "font-medium mb-1" %>
+      <%= form.datetime_field :end_date,
+                              class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-gray-500" %>
+    </div>
   </div>
 
-  <div class="flex flex-col">
-    <%= form.label :end_date, "Cohort End Time", class: "font-medium mb-1" %>
-    <%= form.datetime_field :end_date,
-                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
-  </div>
+  <div class="flex justify-between">
+    <div class="flex flex-col">
+      <%= form.label :shortlist_start_time, "Shortlist Start Time", class: "font-medium mb-1" %>
+      <%= form.datetime_field :shortlist_start_time,
+                              class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-gray-500" %>
+    </div>
 
-  <div class="flex flex-col">
-    <%= form.label :shortlist_start_time, "Shortlist Start Time", class: "font-medium mb-1" %>
-    <%= form.datetime_field :shortlist_start_time,
-                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
-  </div>
-
-  <div class="flex flex-col">
-    <%= form.label :shortlist_end_time, "Shortlist End Time", class: "font-medium mb-1" %>
-    <%= form.datetime_field :shortlist_end_time,
-                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+    <div class="flex flex-col">
+      <%= form.label :shortlist_end_time, "Shortlist End Time", class: "font-medium mb-1" %>
+      <%= form.datetime_field :shortlist_end_time,
+                              class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-gray-500" %>
+    </div>
   </div>
 
   <div class="flex flex-col">
     <%= form.label :required_meetings, "Required Meetings", class: "font-medium mb-1" %>
     <%= form.number_field :required_meetings,
-                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none  focus:ring-gray-500" %>
   </div>
 
-  <div class="flex justify-end">
-    <%= form.submit "Save Cohort",
+  <div class="flex justify-center">
+    <%= form.submit "Add New Cohort",
                     class: "bg-gray-800 hover:bg-black text-white font-semibold px-4 py-2 rounded-lg transition duration-300 mt-2" %>
   </div>
 <% end %>
