feat: add survey trend

--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -40,6 +40,10 @@
         </div>
       </div>
     </div>
+    <div>
+      <%= render 'dashboard/admin/survey_trend_chart' %>
+    </div>
+
   </main>
 </div>
 
