--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 </head>
 <body class="min-h-screen flex flex-col">
 <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/apexcharts@3.46.0/dist/apexcharts.min.js"></script>
 <% if current_page?(home_path) %>
   <%= render 'shared/landing_nav_mb' %>
   <%= render 'shared/landing_nav' %>
