update: apply new sidebar

--- a/app/views/cohort_members/index.html.erb
+++ b/app/views/cohort_members/index.html.erb
@@ -1,6 +1,5 @@
-<div class="bg-gray-50 mt-5 mb-20">
-  <div class="flex justify-center p-8">
-    <%= render partial: "dashboard/admin_sidebar", locals: { sidebar_data: @sidebar_data } %>
+<div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1rem] h-[80vh]">
+    <%= render partial: "dashboard/admin/admin_sidebar", locals: { sidebar_data: @sidebar_data } %>
     <div class="container mx-auto mt-20 px-4">
       <div class="mb-5">
         <!-- Back to Dashboard Button -->
