--- a/app/views/cohorts/index.html.erb
+++ b/app/views/cohorts/index.html.erb
@@ -1,7 +1,7 @@
-<div class="bg-gray-50 mt-20">
-  <div class="flex justify-center p-8">
+<div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1rem] h-[80vh]">
+  <div class="flex justify-center">
     <!-- Sidebar Section -->
-    <%= render partial: "dashboard/admin_sidebar", locals: { sidebar_data: @sidebar_data } %>
+    <%= render partial: "dashboard/admin/admin_sidebar", locals: { sidebar_data: @sidebar_data } %>
     <!-- Main Content Section -->
     <div class="flex-1">
       <div class="mb-5 flex justify-between items-center">
