--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,7 +1,7 @@
 <div class="flex mt-[5rem] mx-[5rem]">
   <!-- Sidebar Section -->
   <aside class="w-1/4 pr-4">
-    <%= render 'dashboard/admin_sidebar' %>
+    <%= render 'dashboard/admin/admin_sidebar' %>
   </aside>
   <!-- Main Content Section -->
   <main class="w-3/4">
