--- a/app/views/dashboard/admin/_admin_sidebar.html.erb
+++ b/app/views/dashboard/admin/_admin_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-4 w-[18rem] h-[100%] py-9 px-6 bg-white rounded-[0.75rem] shadow-sm mr-8 font-normal ">
+<div class="flex flex-col gap-4 w-[18rem] h-[80vh] py-9 px-6 bg-white rounded-[0.75rem] shadow-sm mr-8 font-normal ">
   <!--  user info -->
   <div class="flex items-center">
     <% if current_user.profile_picture.attached? %>
