feat: update the link to admin side nav

--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1rem] h-[80vh]">
   <%= render partial: "dashboard/admin/admin_sidebar" %>
-  <main class="w-[calc(100%-22rem)] max-w-[80rem] h-[100%] pr-10 overflow-auto">
+  <main class="w-[calc(100%-22rem)] max-w-[100%] h-[80vh] pr-10 overflow-auto">
     <h1 class="text-2xl text-[#202020] font-bold mb-2">Hi <%= current_user.first_name %>!</h1>
     <div class="flex justify-between text-[#898989] text-sm mb-5">
       <p>Welcome back to the Mentorship dashboard</p>
