--- a/app/views/dashboard/admin/_cohort_cards.html.erb
+++ b/app/views/dashboard/admin/_cohort_cards.html.erb
@@ -1,26 +1,29 @@
 <div class="grid grid-cols-3 gap-5">
   <div class="p-6 py-8 bg-white shadow-sm rounded-[0.8rem]">
-    <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Total Cohorts Managed</p>
+    <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Cohort Name</p>
     <div class="flex justify-between">
-      <h3 id="cohort_name" class="text-[1.5rem] font-semibold">
-        <%= @cohorts.first&.cohort_name || 'No Cohorts' %>
+      <h3 id="cohort_name" class="text-[1.5rem] font-semibold capitalize">
+        <%= @cohort.cohort_name %>
       </h3>
       <img src="<%= asset_path('icon/category.svg') %>" class="w-[1.5rem] fill-current">
     </div>
   </div>
   <div class="p-6 py-8 bg-white shadow-sm rounded-[0.8rem]">
-    <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Total Matches Made</p>
+    <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Number of Active Mentors</p>
     <div class="flex justify-between">
       <h3 id="number_of_pairings" class="text-[1.5rem] font-semibold">
-        <%= @cohorts.first&.pairing_number || '0' %> Pairs
+        TODO
+<!--        <%#= @cohorts.first&.pairing_number || '0' %> Pairs-->
       </h3>
       <img src="<%= asset_path('icon/2_user_gray.svg') %>" class="w-[1.5rem] fill-current">
     </div>
   </div>
   <div class="p-6 py-8 bg-white shadow-sm rounded-[0.8rem]">
-    <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Days in Operation</p>
+    <p class="text-[0.875rem] font-medium text-[#898989] pb-2">Number of Active Mentors</p>
     <div class="flex justify-between">
-      <h3 id="scheduled_meetings" class="text-[1.5rem] font-semibold">N/A</h3>
+      <h3 id="scheduled_meetings" class="text-[1.5rem] font-semibold">
+        TODO
+      </h3>
       <img src="<%= asset_path('icon/2_user_gray.svg') %>" class="w-[1.5rem] fill-current">
     </div>
   </div>
