--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="flex flex-wrap items-center justify-center bg-black h-[46px] w-full mt-auto">
+<footer class="flex flex-wrap items-center justify-center bg-black h-[40px] w-full mt-auto z-0">
     <div class="text-center text-white text-sm font-normal">
         All rights reserved. ©2024 Discovery Partners Institute.
     </div>
