--- a/app/views/cohorts/show.html.erb
+++ b/app/views/cohorts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1rem] h-[80vh]">
   <%= render partial: "dashboard/admin/admin_sidebar" %>
   <main class="w-[calc(100%-22rem)] max-w-[100%] h-[80vh] pr-10 overflow-auto">
-    <h1 class="text-2xl text-[#202020] font-bold mb-2">Hi <%= current_user.first_name %>!</h1>
+    <h1 class="text-2xl text-[#202020] font-bold mb-2 capitalize"><%= @cohort.cohort_name %> Dashboard</h1>
     <div class="flex justify-between text-[#898989] text-sm mb-5">
       <p>Welcome back to the Mentorship dashboard</p>
       <div class="flex justify-end space-x-4 text-sm">
