updated pie chart colors to match wireframe

--- a/app/views/dashboard/admin/_low_rated_surveys.html.erb
+++ b/app/views/dashboard/admin/_low_rated_surveys.html.erb
@@ -41,7 +41,7 @@
                 <%= survey.match.mentee.name rescue "Mentee" %>
               </p>
               <p class="text-xs text-gray-500">
-                <%= survey.match.cohort.name rescue "Cohort" %>
+                <%= survey.match.cohort.cohort_name rescue "Cohort" %>
               </p>
             </div>
           </div>
