--- a/app/views/dashboard/admin/_survey_pie_chart.html.erb
+++ b/app/views/dashboard/admin/_survey_pie_chart.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white rounded-lg shadow-sm p-6 w-[430px] h-[367px]">
-  <h3 class="text-xl font-semibold text-[#202020] mb-6">Survey Ratings</h3>
+  <h2 class="text-xl font-semibold text-[#202020] mb-6">Survey Ratings</h2>
   
   <div class="flex flex-col items-center">
     <div class="w-[180px] h-[180px] relative mb-8">
@@ -7,11 +7,11 @@
         total = @surveys_by_rating.values.sum.to_f
         start_angle = 0
         colors = {
-          5 => "#424242",  # darkest grey
-          4 => "#757575",  # medium dark grey
-          3 => "#A3A3A3",  # medium grey
-          2 => "#D4D4D4",  # light grey
-          1 => "#FF9A9A"   # coral red
+          5 => "rgba(66, 66, 66, 0.8)", 
+          4 => "#AAA8A7",  
+          3 => "#DCDCDC", 
+          2 => "rgba(249, 131, 124, .58)",  
+          1 => "#F9837C"  
         }
       %>
       <svg viewBox="0 0 100 100" class="w-full h-full transform -rotate-90">
